--- a/inst/www/style/styles.css
+++ b/inst/www/style/styles.css
@@ -122,7 +122,7 @@ footer a, footer a:hover {
     display: block;
 }
 .fileinput input[type=text] {
-	width: 164px;
+	width: 213px;
 	cursor: default;
 }
 a.btn {
@@ -130,6 +130,9 @@ a.btn {
 }
 .example span:nth-child(2n) {
 	text-align: right;
+}
+.carousel-indicators {
+    bottom: -30px;
 }
 .carousel-indicators li {
 	background-color: #222;
@@ -139,12 +142,20 @@ a.btn {
 	background-color: #222;
 	opacity: 0.5;
 }
+.carousel-control {
+    color: #222;
+}
+.carousel-control.right,
+.carousel-control.left {
+    background-image: none;
+}
 #progressOverlay {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+    z-index: 10;
 	background: rgba(255,255,255,0.8);
 	text-align: center;
 }
